support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_insert_bad.i
%module xxx

%insert("foobar") %{
some code
%}
